unpackaged/main/default/objects/Contact/fields/About_Contact__c.field-meta.xml
<CustomField>
    <fullName>About_Contact__c</fullName>
    <description>This field will capture any key information users see fit to store as being important to know about this person</description>
    <inlineHelpText>This field will capture any key information users see fit to store as being important to know about this person</inlineHelpText>
    <label>About Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>