unpackaged/main/default/objects/Contact/fields/CLTV_Score__c.field-meta.xml
<CustomField>
    <fullName>CLTV_Score__c</fullName>
    <description>Customer Lifetime Value Score</description>
    <inlineHelpText>Customer Lifetime Value Score</inlineHelpText>
    <label>CLTV Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>