unpackaged/main/default/objects/Contact/fields/Convictions__c.field-meta.xml
<CustomField>
    <fullName>Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convictions</label>
    <type>Checkbox</type>
</CustomField>