unpackaged/main/default/objects/Contact/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>DateTime</type>
</CustomField>