unpackaged/main/default/objects/Contact/fields/EmailSuccessfullySent__c.field-meta.xml
<CustomField>
    <fullName>EmailSuccessfullySent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to ensure we can track and trace back failed payment collection email has been sent. This is one - off - accounts team failed to submit a file for instalment collection in for January 2025.</description>
    <label>EmailSuccessfullySent</label>
    <type>Checkbox</type>
</CustomField>