unpackaged/main/default/objects/Contact/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for one-off email comms to the customers we failed to collect January payment (jan 2025)</description>
    <label>Flag</label>
    <type>Checkbox</type>
</CustomField>