unpackaged/main/default/objects/Contact/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History</label>
    <type>Checkbox</type>
</CustomField>