unpackaged/main/default/objects/Contact/fields/Profile_Email__c.field-meta.xml
<CustomField>
    <fullName>Profile_Email__c</fullName>
    <label>Additional Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>