unpackaged/main/default/objects/Contact/fields/Profile_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_First_Name__c</fullName>
    <label>Profile First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>