unpackaged/main/default/objects/Contact/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <externalId>true</externalId>
    <label>Profile_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>