unpackaged/main/default/objects/Contact/fields/Profile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Profile_Phone__c</fullName>
    <label>Profile Phone</label>
    <type>Phone</type>
</CustomField>