unpackaged/main/default/objects/Contact/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <description>To store Contact record Id for use in email template merge field</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordId</label>
    <type>Text</type>
</CustomField>