unpackaged/main/default/objects/Contact/fields/Seniority_Level__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Level__c</fullName>
    <inlineHelpText>The level of role seniority in the bussiness</inlineHelpText>
    <label>Seniority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>General Staff</fullName>
            </value>
            <value>
                <fullName>Senior Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>