unpackaged/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Key Contact - the main person you interact with, often influential in decision making process.
Decision Maker - the person with final authority to approve or reject the deal.
Influencer - someone who doesnt make the final decision, but had significant sway over it.
Champion - an internal advocate who pushes for your solution within the company,
Accounts - go to contact in Account department; Claims - go to contact in Claims department</description>
    <inlineHelpText>Key Contact - the main person you interact with, often influential in decision making process.
Decision Maker - the person with final authority to approve or reject the deal.
Influencer - someone who doesnt make the final decision, but had significant sway over it.
Champion - an internal advocate who pushes for your solution within the company,
Accounts - go to contact in Account department; Claims - go to contact in Claims department</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Day-to-Day Contact</fullName>
                <isActive>false</isActive>
                <label>Day-to-Day Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>