unpackaged/main/default/objects/Contact/fields/UTM_Agent__c.field-meta.xml
<CustomField>
    <fullName>UTM_Agent__c</fullName>
    <label>UTM Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>