unpackaged/main/default/objects/Contact/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <description>Record type used to assign to Contacts working for specific broker company</description>
    <label>Broker</label>
</RecordType>