unpackaged/main/default/objects/Contact/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Used to group business and individual accounts into one category. This is due to the customer matching issues faced in July 2024. It is a temporary fix, in the future we should be back to using limited, sole trader etc record types.</description>
    <label>General</label>
</RecordType>