unpackaged/main/default/objects/Contact/validationRules/Contact_Prevent_field_modification.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Prevent_field_modification</fullName>
    <active>true</active>
    <description>This is to restrict ability to modify fields that become editable as a default as soon as &#39;Edit&#39; permission is added to the permission set
Created specifically for Claim Manager Permission set under ClaimManagerGroup permission set group</description>
    <errorConditionFormula>AND(

    OR
      (
  
       ISCHANGED( Has_Car__c ),
       ISCHANGED(Preferred_Channel__c),
       ISCHANGED(FirstName),
       ISCHANGED(LastName),
       ISCHANGED(MiddleName)
    
 ),
  
 $Permission.Contact_Cannot_Edit_fields,
 $Profile.Name  &lt;&gt;  &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You don&#39;t have permission to edit this field, please contact your system admin</errorMessage>
</ValidationRule>