unpackaged/main/default/objects/Contact/listViews/B2C_General_Contacts.listView-meta.xml
<ListView>
    <fullName>B2C_General_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.General</value>
    </filters>
    <label>B2C (General) Contacts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>